[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "coryphee"
version = "1.0rc1"
authors = [
  { name="Romain Gantois"},
]
description = "Record and replay mouse and keyboard actions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
	"pynput >= 1.6.7",
]

[project.scripts]
coryphee = "coryphee.cli:cli"
